# nspray

./: .gitignore  Cargo.toml  README.md  unfuck_deps.sh
src/: camera.rs  caster.rs  debug.rs  dither.rs  fixed.rs  hittable.rs  main.rs  material.rs  matrix.rs  ray.rs  screen.rs  tests.rs  vec3.rs
src/tests/: fixed.rs
